--- a/res/theme_factory.css
+++ b/res/theme_factory.css
@@ -1042,8 +1042,10 @@ body.scheme_factory {
 }
 .scheme_factory .achievement:not(.unethical).unlocked {
 	background-color: #364f30;
-	color: #96ce82;
 	box-shadow: inset 0 -1px 2px rgba(21, 31 , 19, 0.9), inset 0 1px 2px rgba(143, 197, 124, 0.9), inset 1px 0 2px rgba(45, 53 , 32, 0.7), inset -1px 0 2px rgba(45, 53 , 32, 0.7);
+}
+.scheme_factory .achievement:not(.unethical, .name).unlocked {
+	color: #96ce82;
 }
 .scheme_factory .achievement.unethical {
 	background-color: #8e0101;
