--- a/res/theme_school.css
+++ b/res/theme_school.css
@@ -686,13 +686,15 @@ body.scheme_school.with_background_image,
     margin: 10px;
     height: 40px;
     background-color: rgba(187, 192, 202, 0.1); /* color #BBC0CA */
-    color: #D2D2D2;
     text-shadow: rgba(187, 192, 202, 1) 2px 0 10px; /* color #BBC0CA */
     text-transform: capitalize;
     letter-spacing: 1px;
     cursor: default !important;
-	border-color : rgba(165, 107, 91, 0.4); /* color #A56B5B; */
 	border-radius: 3px 3px 9px 9px;
+}
+.scheme_school .achievement:not(.name) {
+	color: #D2D2D2;
+	border-color : rgba(165, 107, 91, 0.4); /* color #A56B5B; */
 }
 .scheme_school .achievement:hover {
     background-color: rgba(181, 133, 120, 0.3); /* color #b58578 */
